Updates definition list styling to prevent wrapping on smaller screens

--- a/assets/_styles/_read-only.scss
+++ b/assets/_styles/_read-only.scss
@@ -24,7 +24,6 @@
       margin-top: -5px !important;
     }
   }
-
   table {
     border: 0;
     border-bottom: 1px solid $grey-2;
@@ -44,31 +43,35 @@
     border-top: 1px solid $grey-2; 
     padding: .5em 0;
   }
+}
 
-  dl {
-    border-bottom: 1px solid $grey-2;
-    width: 100%;
+.definition-list {
+  float: left;
+  border-bottom: 1px solid $grey-2;
+  margin: 0 0 .6em 0;
+  width: 100%;  
+  &__item {
     float: left;
-    margin: 0 0 .6em 0;
-    a {
-      @extend %paragraph--tiny;
-      font-weight: 400;
-    }
+    width: 50%;
+    list-style: none;
+  }
+  a {
+    @extend %paragraph--tiny;
+    font-weight: 400;
   }
   dt, dd {
     float: left;
-    width: 25%;
-    padding: 0 0 .6em 0;
     margin: 0;
+    padding: 0 2.5% .6em 0;
+    width: 47.5%;
   }
-  dt {
-    font-weight: 400;
-  }
-  dd {
-    font-weight: 600;
-    &.three-quarters {
-      width: 72.5%;
-      padding-right: 2.5%;
-    }
+  dt { font-weight: 400; }
+  dd { font-weight: 600; }
+  .full-width {
+    width: 100%;
+    dt { width: 22.5%; }
+    dd { width: 72.5%; } 
   }
 }
+
+
